[tool.poetry]
name = "dmd"
version = "0.0.1"
description = ""
authors = ["mukappalambda <maokailan24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.25"
pandas = ">=2.0"
matplotlib = ">=3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
